# cpp_starter

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Justfile  README.md  build.zig  check_setup.sh  common.cmake  shell.nix  vcpkg-configuration.json  vcpkg.json
cmake/: print-source-files.cmake
src/: hashmap.hpp  main.cpp
tests/: hashmap.cpp
